<resources>
    <string name="app_name">conductor</string>
    <string name="title">Welcome to Conductor</string>
    <string name="fist">Fist</string>
    <string name="open_hand">Open Hand</string>
    <string name="thumbs_up">Thumbs Up</string>
    <string name="thumbs_down">Thumbs Down</string>
    <string name="peace_sign">Peace Sign</string>
    <string name="rock_on">Rock On</string>
    <string name="vol_up">Volume Up</string>
    <string name="vol_down">Volume Down</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_name">NotificationService</string>
    <string name="start_conducting">Start Conducting</string>
    <string name="conductor">Conductor</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="conductor_description">Touchless audio control</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera_permissions">Camera Permissions:</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0_5">0.5</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_20">20</string>
    <string name="shutter_setting_label">Shutter Uptime (seconds):</string>
    <string name="image_rate">Sample Rate (seconds):</string>
    <string name="camera_shutter">Bring Hand Near Device Camera to Start</string>
    <string name="login_with_spotify">Login with Spotify</string>
    <string name="song_title">Title:</string>
    <string name="song_artist">Artist:</string>
    <string name="song_album">Album:</string>
    <string name="album_cover">album cover</string>
    <string name="like">Like</string>
    <string-array name="dropdown_options">
        <item>Thumbs Up</item>
        <item>Point Up</item>
        <item>Thumbs Down</item>
        <item>Fist</item>
        <item>Open Hand</item>
        <item>Peace Sign</item>
        <item>Rock On</item>
    </string-array>

    <string name="gesture_mapping">Control Gestures:</string>
    <string name="activation_distance_label">Camera Activation Distance (cm):</string>
    <string name="image_rate_description">Minimum time between each recognized gesture</string>
    <string name="shutter_uptime_description">Time after last gesture before camera shutoff</string>
    <string name="gesture_control_description">Gesture to music control options</string>
    <string name="conductor_tutorial">Conductor Tutorial</string>
    <string name="steps_explanation">Here are the steps to use Conductor:\n
        1. Play music on your favorite app (or least favorite, it won\'t matter).\n
        2. Open conductor.\n
        3. When you want to give commands, hold you palm in front of the camera to activate it.\n
        4. Control your music using the hand signals shown below! Have fun! :)\n\n</string>
    <string name="mappings_header">Here are your current gesture mappings:</string>

</resources>
