<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <!-- Welcome Label -->
        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"/>

        <!-- 2x3 Grid of Buttons -->
        <GridLayout
            android:id="@+id/control_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_label"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            android:rowCount="3">

            <Button
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"/>

            <Button
                android:id="@+id/button_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"/>

            <Button
                android:id="@+id/button_volume_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vol_up"/>

            <Button
                android:id="@+id/button_volume_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vol_down"/>

            <Button
                android:id="@+id/button_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"/>

            <Button
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"/>
        </GridLayout>

        <!-- Settings Button -->
        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_below="@id/control_grid"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"/>

        <!-- Tutorial Button -->
        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:layout_below="@id/control_grid"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
