<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MediaControllerInterfaceActivity"
    android:background="@color/background_color">

        <!-- Welcome Label -->
        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"/>

        <!-- 2x3 Grid of Buttons -->
        <GridLayout
            android:id="@+id/control_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_label"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            android:rowCount="1">

            <LinearLayout
                android:id="@+id/left_column"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="start">

            <Button
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/play"
                android:backgroundTint="@color/button"
                android:onClick="onPlayButtonClick"/>


            <Button
                android:id="@+id/button_volume_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:layout_gravity="center"
                android:text="@string/vol_up"
                android:onClick="volumeUpClicked"/>

                <Button
                    android:id="@+id/button_skip"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/button"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/skip"
                    android:onClick="onSkipButtonClick"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/right_column"
                android:backgroundTint="@color/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="end">

                <Button
                    android:id="@+id/button_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button"
                    android:text="@string/pause"
                    android:onClick="onPauseButtonClick"/>

            <Button
                android:id="@+id/button_volume_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/button"
                android:text="@string/vol_down"
                android:onClick="volumeDownClicked"/>


            <Button
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/button"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/previous"
                android:onClick="onPreviousButtonClick"/>
            </LinearLayout>

        </GridLayout>

        <!-- Settings Button -->

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/control_grid"
        android:layout_centerInParent="true"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/button"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="16dp"
            android:onClick="settingsClicked"
            android:layout_marginEnd="10dp"/>

        <!-- Tutorial Button -->
        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/button"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"/>


    </LinearLayout>


    </RelativeLayout>
