<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.Conductor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conductor_tutorial"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps_explanation"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/mappingHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mappings_header"
        android:textSize="18sp"
        android:textStyle="bold"/>

        <!-- Vertical Linear Layout for photo/word combinations -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:contentDescription="@string/play"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/play"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:contentDescription="@string/pause"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pause"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:contentDescription="@string/vol_up"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/vol_up"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_up"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:contentDescription="@string/vol_down"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/vol_down"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_down"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:contentDescription="@string/skip"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/skip"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:contentDescription="@string/previous"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/previous"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/previous"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"
        android:onClick="tutorialBackClicked" />

</LinearLayout>


</ScrollView>
